--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>resume-spark-craft</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>resume-spark-craft</title>    <meta name="description" content="Resume Builder - Create Professional Resumes" />
+    <meta name="author" content="Resume Spark" />
 
     <meta property="og:title" content="resume-spark-craft" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Create professional resumes with Resume Spark" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
