--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>resume-spark-craft</title>    <meta name="description" content="Resume Builder - Create Professional Resumes" />
+    <title>resume-spark-craft</title>
+    <meta
+      name="description"
+      content="Resume Builder - Create Professional Resumes"
+    />
     <meta name="author" content="Resume Spark" />
 
     <meta property="og:title" content="resume-spark-craft" />
-    <meta property="og:description" content="Create professional resumes with Resume Spark" />
+    <meta
+      property="og:description"
+      content="Create professional resumes with Resume Spark"
+    />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
